used flex to fix text wrapping issues

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ html {
 .editBtn {
     background: rgba(161, 51, 60, 10%);
     border: 1px solid #A1333C;
-    margin: 5px 0px 5px 15px;
+    margin: 5px 5px;
     color: #A1333C;
 }
 
@@ -98,6 +98,7 @@ html {
 /*input[type=checkbox] {
     accent-color: rgba(161, 51, 60, 100%);
 }
+.checkContainer input:checked~.checkmark {}
 */
 
 .checkContainer {
@@ -132,8 +133,6 @@ html {
     background-color: rgba(161, 51, 60);
 }
 
-.checkContainer input:checked~.checkmark {
-}
 
 .checkmark:after {
     content: "";
@@ -155,4 +154,14 @@ html {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+.taskListContainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.taskName {
+    margin: 5px;
+    word-wrap: break-word;
 }
